# SFMLTest

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: build.yaml
___versioning/: last_snapshot.txt
main/: CMakeLists.txt  main.cpp
main/impl/: async_update.ipp
main/include/: async_update.h  fps_counter.h  logo.h
main/src/: _win_wrapper.cpp  async_update.cpp  fps_counter.cpp  logo.cpp
test/: CMakeLists.txt  main_test.cpp
